# narrative-network

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.frontend  Dockerfile.python  EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.md  GRAPH_NAVIGATOR_SPEC.md  QUICK_REFERENCE.md  README.md  docker-compose.local.yml  justfile  package-lock.json  package.json  pyproject.toml  svelte.config.js
docs/: evolution-lifecycle.md  evolution-lifecycle.txt  glossary.md  goals.md  hackathon-submission.md  k8s-ops.md  prd.md
domain/: corpus.py  knowledge_sync.py  manifest.py  miner.py  unified_miner.py
evolution/: __init__.py  integration.py  local.py  nla_settlement.py  proposal.py  pruning.py  voting.py
k8s/: configmap.yaml  domain-miner.yaml  frontend.yaml  gateway.yaml  ingress.yaml  ipfs.yaml  letsencrypt-issuer.yaml  namespace.yaml  narrative-miner.yaml  redis.yaml  secrets.yaml  validator.yaml
k8s-local/: kustomization.yaml
memory/: MEMORY.md  project_arkhai_arbiter.md  project_dev_gateway.md  project_graph_api.md  project_traverse_ui.md
orchestrator/: __init__.py  arbiter.py  embedder.py  gateway.py  mock_scoring.py  router.py  safety_guard.py  session.py  session_store.py  unbrowse.py
seed/: loader.py  topology.yaml
src/: app.css  app.html
subnet/: __init__.py  _bt_compat.py  config.py  emissions.py  events.py  graph_store.py  harness.py  metagraph_watcher.py  protocol.py  protocol_local.py  reward.py  validator.py
tests/: conftest.py  test_corpus.py  test_corpus_challenge.py  test_domain_miner.py  test_emissions.py  test_evolution_integration_manager.py  test_evolution_local.py  test_evolution_proposal.py  test_evolution_pruning.py  test_evolution_voting.py  test_graph_store.py  test_integration.py  test_knowledge_sync.py  test_multi_epoch.py  test_narrative_miner.py  test_nla_settlement.py  test_protocol.py  test_reward.py  test_validator.py  (+2 more)
(+108 files in other folders)
