[project]
name = "narrative-network"
version = "0.1.0"
description = "Bittensor Subnet 42 — Living knowledge graph with comparative attestation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bittensor>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
