[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narrative-network"
version = "0.1.0"
description = "Narrative Network — Living knowledge graph with comparative attestation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "openai>=1.30",
    "kuzu>=0.4",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
bt = [
    "bittensor>=10.1.0",
]
ml = [
    "onnxruntime>=1.17",
    "tokenizers>=0.19",
    "huggingface-hub>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
narrative-validator = "subnet.validator:main"
narrative-miner = "domain.unified_miner:main"
narrative-gateway = "orchestrator.gateway:main"

[tool.hatch.build.targets.wheel]
packages = ["subnet", "domain", "orchestrator", "evolution"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
